chore: update post exp
