# internal/dto/register_dto.go
@@ -1,0 +1,7 @@
+package dto
+
+type RegisterRequest struct {
+	Name     string `json:"name" binding:"required,min=3,max=30"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
+}
